# lfs_buildeer

./: Bar.qml  BuildPkg.cpp  BuildPkg.h  CMakeLists.txt  FileDialog.qml  Install.cpp  Install.h  InstallDiv.qml  InstallPkg.cc  InstallPkg.h  ListBar.qml  Model.cc  Model.h  Model2.qml  Pkgs2.qml  README  Status.cpp  Status.h  Step2.cpp  Step2.h  config.h  main.cpp  main.qml  model2.cpp  model2.h  pkgs2.cpp  pkgs2.h  qml.qrc
lfs/: 02_gcc.sh  03_linux_header.sh  04_glibc.sh  06_binutils_s2.sh  07_gcc_s2.sh  08_tcl.sh  09_expect.sh  11_m4.sh  14_bison.sh  15_bzip2.sh  19_findutils.sh  20_gawk.sh  21_gettext.sh  23_gzip.sh  24_make.sh  27_python.sh  28_sed.sh  30_texinfo.sh  31_util-linux.sh
lfsscripts/: 01_binutils.sh  02_gcc.sh  05_gcc_libstdc++.sh  07_gcc_s2.sh  10_dejagnu.sh  12_ncurses.sh  13_bash.sh  16_coreutils.sh  17_diffutils.sh  20_gawk.sh  21_gettext.sh  22_grep.sh  26_perl.sh  27_python.sh  29_tar.sh  32_xz.sh  TEST.sh  default.sh
